--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,93 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.heading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;  
+  background-image: cover;  
+}
+
+.heading-container h1 {
+  padding-bottom: 20px;
+  color:rgb(241, 12, 12);
+  font-size: 50px;
+  text-shadow: 2px 2px 2px rgb(0,0,0)
+}
+
+.heading-container p {
+  padding-bottom: 20px;
+  color:rgb(16, 12, 241);
+  font-size: 40px;
+  margin-top: 0px;
+  font-weight:bold;
+  text-shadow: 2px 2px 2px rgb(0,0,0)
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+button {
+  
+  color: rgb(197, 30, 30);
+  margin: 10px;
+  font-size: 50px;
+  border-radius: 50px;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+body {
+  background-color: rgb(0, 158, 8);
+}
+
+.postOne {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+li {
+  font-size: 25px;
+  list-style-type: none;
+}
+
+.App {
+  text-align: center;
+  color: rgb(248, 247, 243);
+}
+
+.postTwo {
+  font-size: 25px;
+  padding: 20px;
+}
+
+.wikilink{
+  color:rgb(241, 169, 12);
+  font-size: 25px;
+  text-decoration: none;
+}
+
+.wikilink:hover {
+  border: 2px solid white;
+}
+
+.postThree {
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  padding: 20px;
+}
+
+.containerOne {
+  padding: 5px;
+}
